----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-19 Michal Cihar  <michal@cihar.com>
    * libraries/tbl_change.js: Better return value formatting.

2004-04-18 Michal Cihar  <michal@cihar.com>
    * libraries/tbl_change.js: Fixed caledar behaviour for DATE fields.
    * libraries/auth/cookie.auth.lib.php: Fix LoginCookieValidity behaviour.
    * libraries/tbl_change.js, tbl_change.php: Add support for DATETIME.

2004-04-18 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Updates.
    * server_privileges.php:
      - $url_query was not visible in function scope;
      - Hotfix to avoid "MySQL out of sync" errors.
    * libraries/dbi/*.dbi.lib.php: Allow the $link argument of
      PMA_DBI_affected_rows() to be left out.

2004-04-17 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/dbi/mysql.dbi.lib.php: was still using PMA_mysql_field_flags

2004-04-17 Alexander M. Turek  <me@derrabus.de>
    * db_create.php, db_details_structure.php, db_details_common.php, main.php,
      tbl_alter.php, tbl_create.php, tbl_properties.inc.php,
      tbl_properties_operations.php, tbl_properties_structure.php,
      tbl_properties_table_info.php, libraries/mysql_charsets.lib.php:
      Added ability to set / alter collations for databases, tables and fields.
    * tbl_alter.php: Charset information got lost when changing fields.
    * libraries/common.lib.php, libraries/mysql_wrappers.lib.php:
      Removed mysql_wrappers library.

2004-04-16 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french update
    * scripts/create-release.sh: daily snapshots 

2004-04-16 Michal Cihar  <michal@cihar.com>
    * libraries/common.lib.php, libraries/export/sql.php: ANSI compatible
      exports (RFE #859815).
    * images/button_export.png: At least some export icon.
    * libraries/display_tbl.lib.php: Fix image sizes.
    * calendar.php, tbl_change.php, css/phpmyadmin.css.php,